--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,12 @@
       <p class="get_a_cash">Get A Cash Offer For Your</p>
       <p class="get_a_cash">Home Today!</p>
       <p class="sell_your_house">Sell Your House Fast To A Reputable Nationwide Homebuyer</p>
-      <div class="fake_form"></div>
+
+      <form action="/contact" class="contact_form">
+        <div class="testing_item"></div>
+        <div class="testing_item"></div>
+        <div class="testing_item"></div>
+      </form>
     </div>
   </header>
 </body>
