--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,9 +31,13 @@
       <p class="get_a_cash">Home Today!</p>
       <p class="sell_your_house">Sell Your House Fast To A Reputable Nationwide Homebuyer</p>
 
-      <form action="/contact" class="contact_form">
-        <div class="input_wrapper">
+      <form action="/" method="post" class="contact_form">
+        <!-- <div class="input_wrapper">
           <img class="address_icon" src="{{ url_for('static', filename='img/address_icon.png') }}" alt="phone_icon">
+          {{ form.address(class="contact_input", placeholder="Address") }}
+        </div> -->
+        <div class="input_wrapper">
+          <img class="phone_icon" src="{{ url_for('static', filename='img/address_icon.png') }}" alt="phone_icon">
           {{ form.address(class="contact_input", placeholder="Address") }}
         </div>
         <div class="input_wrapper">
