--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -124,27 +124,27 @@
         <ul class="about_list_block">
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
-            <p>Inherited Horne</p>
+            <p>Foreclosuree</p>
           </li>
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
-            <p>Retirement</p>
+            <p>Job Loss</p>
           </li>
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
-            <p>Bad Tenants</p>
+            <p>Relocating</p>
           </li>
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
-            <p>Expensive Repairs</p>
+            <p>Divorce</p>
           </li>
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
-            <p>Damage</p>
-          </li>
-          <li class="about_list_item">
-            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
-            <p>Downsizing</p>
+            <p>
+              Bankruptcy
+              <br>
+              Health Issues
+            </p>
           </li>
         </ul>
       </div>
@@ -152,6 +152,22 @@
       <a href="#" class="about_button">Get my offer</a>
     </div>
     <img src="{{ url_for('static', filename='img/about_img.png') }}" alt="about_img" class="about_img">
+  </section>
+
+  <section class="explore">
+    <img src="{{ url_for('static', filename='img/explore.png') }}" alt="explore_img" class="explore_img">
+
+    <div class="about_left">
+      <p class="about_us_heading">Explore</p>
+      <p class="about_us_subheading">Discover the Diverce</p>
+      <p class="about_us_subheading">Locations Where We Have</p>
+      <p class="about_us_subheading">Bought Properties</p>
+      <p class="explore_description">
+        We continuously purchase homes in 15 different states including Indiana, Texas, Florida, Maryland, Michigan,
+        Utah,
+        Nevada, Colorado, Tennessee, Alabama, Ohio, North Carolina, South Carolina.
+      </p>
+    </div>
   </section>
 </body>
 
