--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -191,8 +191,8 @@ header {
 }
 
 .about_us {
-    width: 1300px;
-    margin-inline: calc(50% - 650px);
+    width: 1200px;
+    margin-inline: calc(50% - 600px);
     margin-top: 250px;
     display: flex;
     display: grid;
@@ -238,6 +238,10 @@ header {
     align-items: center;
 }
 
+.health_item {
+    opacity: 0;
+}
+
 .about_check {
     width: 12px;
     height: 12px;
@@ -264,13 +268,13 @@ header {
 }
 
 .about_img {
-    width: 100%;
-    height: 718px;
+    width: 122%;
+    /* height: 718px; */
 }
 
 .explore {
-    width: 1300px;
-    margin-inline: calc(50% - 650px);
+    width: 1200px;
+    margin-inline: calc(50% - 600px);
     margin-top: 100px;
     display: flex;
     display: grid;
@@ -278,12 +282,115 @@ header {
 }
 
 .explore_img {
-    width: 640px;
+    width: 585px;
 }
 
 .explore_description {
     font-family: "Georgia";
     font-size: 20px;
     line-height: 23px;
-    /* margin-block: 32px; */
+}
+
+.make_it_easy {
+    width: 1200px;
+    margin-inline: calc(50% - 600px);
+    margin-top: 100px;
+}
+
+.make_it_easy_description {
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.v_check {
+    width: 20px;
+    height: 16px;
+    margin-right: 15px;
+}
+
+.cross_check {
+    width: 20px;
+    height: 20px;
+    margin-right: 15px;
+}
+
+.make_it_easy_list_heading {
+    font-family: "Montserrat";
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.make_it_easy_item {
+    font-family: "Montserrat";
+    display: flex;
+    align-items: center;
+}
+
+.make_it_easy_item p {
+    margin-left: 8px;
+    margin-block: 6px;
+}
+
+.hr {
+    margin-top: 70px;
+    position: relative;
+}
+
+.hr_img {
+    width: 100%;
+}
+
+@media screen and (min-width: 1920px) {
+    .hr {
+        width: 1920px;
+        margin-inline: calc(50% - 860px);
+    }
+}
+
+.hr_text {
+    margin: 0;
+    position: absolute;
+    top: calc(50% - 23px);
+    left: 200px;
+    font-family: "Montserrat";
+    font-weight: 600;
+    font-size: 40px;
+    color: #FFFFFF;
+}
+
+.hr_call {
+    position: absolute;
+    top: calc(50% - 28px);
+    right: 510px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 160px;
+    height: 56px;
+    text-decoration: none;
+    background-color: white;
+    border-radius: 35px;
+    color: #D06224;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.hr_button {
+    position: absolute;
+    top: calc(50% - 28px);
+    right: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 56px;
+    text-decoration: none;
+    background-color: #D06224;
+    border-radius: 35px;
+    color: white;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 20px;
 }
