--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -229,8 +229,13 @@
   <section class="hr">
     <img src="{{ url_for('static', filename='img/hr.png') }}" alt="hr" class="hr_img">
     <p class="hr_text">What are you waiting for?</p>
-    <a href="#" class="hr_call">Call</a>
+    <a href="tel:+17145846719" class="hr_call">Call</a>
     <a href="#" class="hr_button">Get my offer</a>
+  </section>
+
+  <section class="client_reviews">
+    <p class="about_us_heading">Client reviews from Google</p>
+    <p class="about_us_subheading">What They Say</p>
   </section>
 </body>
 
