--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -394,3 +394,10 @@ header {
     font-weight: 400;
     font-size: 20px;
 }
+
+.client_reviews {
+    width: 1200px;
+    margin-inline: calc(50% - 600px);
+    margin-top: 100px;
+    margin-bottom: 300px;
+}
