--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -32,6 +32,7 @@ header {
 }
 
 .rno {
+    font-family: "Montserrat";
     text-transform: uppercase;
     font-size: 11px;
     font-weight: bold;
@@ -193,6 +194,8 @@ header {
 .about_us {
     width: 1200px;
     margin-inline: calc(50% - 600px);
+    overflow: hidden;
+    /* margin-left: calc(50% - 600px); */
     margin-top: 250px;
     display: flex;
     display: grid;
@@ -269,7 +272,7 @@ header {
 
 .about_img {
     width: 122%;
-    /* height: 718px; */
+    /* height: 752px; */
 }
 
 .explore {
@@ -390,7 +393,7 @@ header {
     background-color: #D06224;
     border-radius: 35px;
     color: white;
-    font-family: 'Montserrat';
+    font-family: "Montserrat";
     font-weight: 400;
     font-size: 20px;
 }
@@ -400,4 +403,57 @@ header {
     margin-inline: calc(50% - 600px);
     margin-top: 100px;
     margin-bottom: 300px;
+}
+
+footer {
+    padding-top: 81px;
+    padding-inline: calc(50% - 600px);
+    padding-bottom: 97px;
+    background-color: #1c1c1c;
+    display: grid;
+    grid-template-columns: 45% 55%;
+}
+
+.footer_left,
+.footer_right {
+    color: white;
+}
+
+.footer_right_menu {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_left_description {
+    font-family: 'Georgia';
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.footer_menu {
+    padding: 0;
+    margin-block: 12px;
+    font-family: "Montserrat";
+    font-weight: 400;
+    font-size: 20px;
+    list-style-type: none;
+}
+
+.footer_menu a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer_menu_item {
+    margin-block: 21px;
+}
+
+.footer_contact_form {
+    width: 100%;
+    height: 75px;
+    /* margin-inline: 10%; */
+    background-color: white;
+    border-radius: 60px;
+    display: flex;
+    justify-content: space-between;
 }
