--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -456,3 +456,43 @@ footer {
     display: flex;
     justify-content: space-between;
 }
+
+.footer_input_wrapper {
+    height: 33%;
+    position: relative;
+    display: flex;
+}
+
+.footer_contact_input {
+    width: 100%;
+    height: 50px;
+    margin-block: 12px;
+    margin-left: 23px;
+    padding-left: 32px;
+    border: none;
+    outline: none;
+    font-family: "Georgia";
+    font-size: 18px;
+    border-radius: 60px;
+}
+
+.footer_contact_input::placeholder {
+    color: #7D7D7D;
+    font-family: "Georgia";
+    font-size: 18px;
+}
+
+.footer_phone_input {
+    width: 100%;
+    height: 50px;
+    margin-block: 12px;
+    margin-left: 23px;
+    padding-left: 32px;
+    border-left: 1px solid #929292;
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    outline: none;
+    font-family: "Georgia";
+    font-size: 18px;
+}
