--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 header {
@@ -92,6 +93,10 @@ header {
     justify-content: space-between;
 }
 
+.contact_form_mobile {
+    display: none;
+}
+
 .input_wrapper {
     height: 100%;
     position: relative;
@@ -161,6 +166,10 @@ header {
     bottom: -141px;
 }
 
+.white_boxes_wrapper_mobile {
+    display: none;
+}
+
 .white_box {
     width: 304px;
     height: 245px;
@@ -198,6 +207,10 @@ header {
     margin-top: 250px;
     display: grid;
     grid-template-columns: 55% 45%;
+}
+
+.about_us_mobile {
+    display: none;
 }
 
 .about_left {
@@ -337,6 +350,10 @@ header {
     position: relative;
 }
 
+.hr_mobile {
+    display: none;
+}
+
 .hr_img {
     width: 100%;
 }
@@ -344,7 +361,7 @@ header {
 @media screen and (min-width: 1920px) {
     .hr {
         width: 1920px;
-        margin-inline: calc(50% - 860px);
+        margin-inline: calc(50% - 960px);
     }
 }
 
@@ -498,7 +515,36 @@ footer {
     font-size: 18px;
 }
 
+@media screen and (min-width: 1080px) and (max-width: 1420px) {
+    .hr_text {
+        top: 23%;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        width: 540px;
+    }
+
+    .hr_call {
+        top: 55%;
+        left: 30%;
+        width: 210px;
+    }
+
+    .hr_button {
+        top: 55%;
+        right: 30%;
+        width: 210px;
+    }
+}
+
+
+
 @media screen and (max-width: 1080px) {
+    header {
+        height: 820px;
+    }
+
     .menu {
         width: 90%;
         margin-top: 32px;
@@ -518,6 +564,11 @@ footer {
 
     .menu_left {
         margin-top: 12px;
+        justify-content: center;
+    }
+
+    .southern_california_1 {
+        text-align: center;
     }
 
     .menu_item {
@@ -526,7 +577,7 @@ footer {
 
     .transparent_card {
         width: 326px;
-        height: 705px;
+        height: 538px;
         position: absolute;
         top: 208px;
         margin-inline: calc(50% - 175px);
@@ -562,24 +613,168 @@ footer {
         cursor: pointer;
     }
 
+    .input_wrapper_mobile {
+        width: 90%;
+        margin-inline: 5%;
+        margin-block: 23px;
+        /* padding-left: 10%; */
+    }
+
+    .contact_input_mobile::placeholder,
+    .phone_input_mobile::placeholder {
+        text-align: center;
+    }
+
+    .input_wrapper_mobile:first-child {
+        padding-bottom: 12px;
+        border-bottom: 1px solid #7D7D7D;
+    }
+
+    .contact_input_mobile {
+        width: 90%;
+        border: none;
+        outline: none;
+    }
+
+    .phone_input_mobile {
+        width: 90%;
+        border: none;
+        outline: none;
+    }
+
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+        -webkit-box-shadow: 0 0 0 30px white inset !important;
+        color: #7D7D7D;
+    }
+
     .white_boxes_wrapper {
         display: none;
+    }
+
+    .white_boxes_wrapper_mobile {
+        display: block;
+    }
+
+    .white_box_mobile {
+        width: 250px;
+        height: 245px;
+        margin-block: 12px;
+        margin-inline: calc(50% - 165px);
+        padding: 26px 40px;
+        background-color: white;
+        box-shadow: 0px 0px 9px rgba(148, 148, 148, 0.25);
+        border-radius: 4px;
+        font-family: 'Montserrat';
+        font-weight: 400;
     }
 
     .about_us {
         display: none;
     }
 
+    .about_us_mobile {
+        display: block;
+        margin-top: 50px;
+    }
+
+    .about_left {
+        padding-inline: 23px;
+    }
+
+    .about_us_subheading {
+        font-size: 24px;
+    }
+
+    .about_us_description {
+        text-align: justify;
+    }
+
     .explore {
-        display: none;
+        display: block;
+        width: 99%;
+        margin-top: 50px;
+        margin-inline: 1%;
+    }
+
+    .explore_img {
+        width: 100%;
+    }
+
+    .explore_description {
+        text-align: justify;
     }
 
     .make_it_easy {
+        display: block;
+        width: 99%;
+        margin-top: 50px;
+        margin-inline: 1%;
+    }
+
+    .make_it_easy_list {
+        display: block;
+    }
+
+    .hr {
         display: none;
     }
 
+    .hr_text_mobile {
+        text-align: center;
+        font-family: "Montserrat";
+        color: white;
+    }
+
+    .hr_mobile {
+        display: block;
+        height: 221px;
+        padding-top: 5px;
+        background-image: url(../img/hr.png);
+        background-position: center;
+        background-size: cover;
+    }
+
+    .hr_call_mobile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 160px;
+        height: 56px;
+        margin-inline: auto;
+        text-decoration: none;
+        background-color: white;
+        border-radius: 35px;
+        color: #D06224;
+        font-family: 'Montserrat';
+        font-weight: 400;
+        font-size: 20px;
+        z-index: 3;
+    }
+
+    .hr_button_mobile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        height: 56px;
+        margin-inline: auto;
+        margin-block: 23px;
+        text-decoration: none;
+        background-color: #D06224;
+        border-radius: 35px;
+        color: white;
+        font-family: "Montserrat";
+        font-weight: 400;
+        font-size: 20px;
+        z-index: 3;
+    }
+
     .client_reviews {
-        display: none;
+        width: 94%;
+        margin-inline: 3%;
     }
 
     footer {
