--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,13 +44,14 @@
       </form>
 
       <form action="/" method="post" class="contact_form_mobile">
-        <div class="input_wrapper">
-          <img class="phone_icon" src="{{ url_for('static', filename='img/address_icon.png') }}" alt="phone_icon">
-          {{ form.address(class="contact_input", placeholder="Address") }}
+        <div class="input_wrapper_mobile">
+          <img class="phone_icon_mobile" src="{{ url_for('static', filename='img/address_icon.png') }}"
+            alt="phone_icon">
+          {{ form.address(class="contact_input_mobile", placeholder="Address") }}
         </div>
-        <div class="input_wrapper">
-          <img class="phone_icon" src="{{ url_for('static', filename='img/phone_icon.png') }}" alt="phone_icon">
-          {{ form.phone(class="phone_input", placeholder="Phone number") }}
+        <div class="input_wrapper_mobile">
+          <img class="phone_icon_mobile" src="{{ url_for('static', filename='img/phone_icon.png') }}" alt="phone_icon">
+          {{ form.phone(class="phone_input_mobile", placeholder="Phone number") }}
         </div>
         {{ form.submit(class="submit_button_mobile") }}
       </form>
@@ -67,23 +68,54 @@
 
       <div class="white_box box_talk">
         <img class="steps_icon" src="{{ url_for('static', filename='img/step_icon_pencil.png') }}" alt="step_icon">
-        <div class="step_heading">Submit Your Info</div>
+        <div class="step_heading">Let's talk</div>
         <p class="step_description">
-          One of our representatives from Real Neighborhood Offer will contact you to setup a no-obligation
-          consultation.
+          Consult with one of our Home Buying Specialist, to discuss the details of your property.
         </p>
       </div>
 
       <div class="white_box box_offer">
         <img class="steps_icon" src="{{ url_for('static', filename='img/step_icon_pencil.png') }}" alt="step_icon">
-        <div class="step_heading">Submit Your Info</div>
+        <div class="step_heading">Receive Your Cash Offer</div>
         <p class="step_description">
-          One of our representatives from Real Neighborhood Offer will contact you to setup a no-obligation
-          consultation.
+          When you approve our offer.
+          <br>
+          We will close on your timeline and you get paid within days.
+          It's that simple.
         </p>
       </div>
     </div>
   </header>
+
+  <div class="white_boxes_wrapper_mobile">
+    <div class="white_box_mobile box_submit">
+      <img class="steps_icon" src="{{ url_for('static', filename='img/step_icon_pencil.png') }}" alt="step_icon">
+      <div class="step_heading">Submit Your Info</div>
+      <p class="step_description">
+        One of our representatives from Real Neighborhood Offer will contact you to setup a no-obligation
+        consultation.
+      </p>
+    </div>
+
+    <div class="white_box_mobile box_talk">
+      <img class="steps_icon" src="{{ url_for('static', filename='img/step_icon_pencil.png') }}" alt="step_icon">
+      <div class="step_heading">Let's talk</div>
+      <p class="step_description">
+        Consult with one of our Home Buying Specialist, to discuss the details of your property.
+      </p>
+    </div>
+
+    <div class="white_box_mobile box_offer">
+      <img class="steps_icon" src="{{ url_for('static', filename='img/step_icon_pencil.png') }}" alt="step_icon">
+      <div class="step_heading">Receive Your Cash Offer</div>
+      <p class="step_description">
+        When you approve our offer.
+        <br>
+        We will close on your timeline and you get paid within days.
+        It's that simple.
+      </p>
+    </div>
+  </div>
 
   <section class="about_us">
     <div class="about_left">
@@ -167,6 +199,87 @@
     <img src="{{ url_for('static', filename='img/about_img.png') }}" alt="about_img" class="about_img">
   </section>
 
+  <section class="about_us_mobile">
+    <div class="about_left">
+      <p class="about_us_heading">About us</p>
+      <p class="about_us_subheading">Real Neighborhood Offer</p>
+      <p class="about_us_subheading">Provides Options To Sell Your Home</p>
+      <p class="about_us_description">
+        Real Neighborhood Offer provides another option to sell your house fast. We buy houses with no listing fees. No
+        agent
+        commissions. And a quick, hassle-free closing process. You won’t have to worry about the hassle of repairs or
+        renovations.
+        <br>
+        <br>
+        Getting rid of the headache and hassle of dealing with an unwanted property is our service to you. Sell your
+        house fast
+        without the hassle of a traditional sale.
+        <br>
+        <br>
+        Some reasons our clients have sold their house as-is for a cash offer:
+      </p>
+
+      <div class="about_list">
+        <ul class="about_list_block">
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Inherited Horne</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Retirement</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Bad Tenants</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Expensive Repairs</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Damage</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Downsizing</p>
+          </li>
+        </ul>
+
+        <ul class="about_list_block">
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Foreclosuree</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Job Loss</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Relocating</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Divorce</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
+            <p>Bankruptcy</p>
+          </li>
+          <li class="about_list_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check"
+              class="about_check health_item">
+            <p>Health Issues</p>
+          </li>
+        </ul>
+      </div>
+
+      <a href="#" class="about_button">Get my offer</a>
+    </div>
+  </section>
+
   <section class="explore">
     <img src="{{ url_for('static', filename='img/explore.png') }}" alt="explore_img" class="explore_img">
 
@@ -194,7 +307,7 @@
         additional time, without the stress of:
       </p>
 
-      <div class="about_list">
+      <div class="about_list make_it_easy_list">
         <ul class="about_list_block">
           <p class="make_it_easy_list_heading">Traditional Process</p>
           <li class="make_it_easy_item">
@@ -243,6 +356,14 @@
     <p class="hr_text">What are you waiting for?</p>
     <a href="tel:+17145846719" class="hr_call">Call</a>
     <a href="#" class="hr_button">Get my offer</a>
+  </section>
+
+  <section class="hr_mobile">
+    <p class="hr_text_mobile">What are you waiting for?</p>
+    <div class="hr_mobile_buttons">
+      <a href="tel:+17145846719" class="hr_call_mobile">Call</a>
+      <a href="#" class="hr_button_mobile">Get my offer</a>
+    </div>
   </section>
 
   <section class="client_reviews">
