--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -415,16 +415,17 @@
         {{ form.submit(class="submit_button") }}
       </form>
 
-      <form action="/" method="post" class="footer_contact_form_mobile">
-        <div class="footer_input_wrapper">
-          <img class="phone_icon" src="{{ url_for('static', filename='img/address_icon.png') }}" alt="phone_icon">
-          {{ form.address(class="footer_contact_input", placeholder="Address") }}
+      <form action="/" method="post" class="contact_form_mobile">
+        <div class="input_wrapper_mobile">
+          <img class="phone_icon_mobile" src="{{ url_for('static', filename='img/address_icon.png') }}"
+            alt="phone_icon">
+          {{ form.address(class="contact_input_mobile", placeholder="Address") }}
         </div>
-        <div class="footer_input_wrapper">
-          <img class="phone_icon" src="{{ url_for('static', filename='img/phone_icon.png') }}" alt="phone_icon">
-          {{ form.phone(class="footer_phone_input", placeholder="Phone number") }}
+        <div class="input_wrapper_mobile">
+          <img class="phone_icon_mobile" src="{{ url_for('static', filename='img/phone_icon.png') }}" alt="phone_icon">
+          {{ form.phone(class="phone_input_mobile", placeholder="Phone number") }}
         </div>
-        {{ form.submit(class="submit_button") }}
+        {{ form.submit(class="submit_button_mobile") }}
       </form>
     </div>
   </footer>
