--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -404,6 +404,7 @@
       </div>
 
       <form action="/" method="post" class="footer_contact_form">
+        {{form.hidden_tag()}}
         <div class="footer_input_wrapper">
           <img class="phone_icon" src="{{ url_for('static', filename='img/address_icon.png') }}" alt="phone_icon">
           {{ form.address(class="footer_contact_input", placeholder="Address") }}
@@ -416,6 +417,7 @@
       </form>
 
       <form action="/" method="post" class="contact_form_mobile">
+        {{form.hidden_tag()}}
         <div class="input_wrapper_mobile">
           <img class="phone_icon_mobile" src="{{ url_for('static', filename='img/address_icon.png') }}"
             alt="phone_icon">
