--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Real Neighborhood Offer</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 
@@ -22,7 +22,7 @@
       <div class="menu_left">
         <a href="#about_section" class="menu_item">About us</a>
         <a href="#how_it_works" class="menu_item">How it works</a>
-        <!-- <a href="#" class="menu_item">Reviews</a> -->
+        <a href="#" class="menu_item">Reviews</a>
       </div>
     </div>
 
