--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,8 +20,14 @@
         <p class="southern_california_1">Southern California <b>#1</b> trusted homebuyer</p>
       </div>
       <div class="menu_left">
-        <a href="#about_section" class="menu_item">About us</a>
-        <a href="#how_it_works" class="menu_item">How it works</a>
+        <a id="about_menu_button" href="#about_section" class="menu_item">About us</a>
+        <a id="how_menu_button" href="#how_it_works" class="menu_item">How it works</a>
+        <a href="#" class="menu_item">Reviews</a>
+      </div>
+
+      <div class="menu_left_mobile">
+        <a id="about_menu_button_mobile" href="#about_section_mobile" class="menu_item">About us</a>
+        <a id="how_menu_button_mobile" href="#how_it_works_mobile" class="menu_item">How it works</a>
         <a href="#" class="menu_item">Reviews</a>
       </div>
     </div>
@@ -89,7 +95,7 @@
     </div>
   </header>
 
-  <div id="how_it_works" class="white_boxes_wrapper_mobile">
+  <div id="how_it_works_mobile" class="white_boxes_wrapper_mobile">
     <div class="white_box_mobile box_submit">
       <img class="steps_icon" src="{{ url_for('static', filename='img/step_icon_pencil.png') }}" alt="step_icon">
       <div class="step_heading">Submit Your Info</div>
@@ -201,7 +207,7 @@
     <img src="{{ url_for('static', filename='img/about_img.png') }}" alt="about_img" class="about_img">
   </section>
 
-  <section id="about_section" class="about_us_mobile">
+  <section id="about_section_mobile" class="about_us_mobile">
     <div class="about_left">
       <p class="about_us_heading">About us</p>
       <p class="about_us_subheading">Real Neighborhood Offer</p>
@@ -433,6 +439,10 @@
       </form>
     </div>
   </footer>
+
+  <script src="{{ url_for('static', filename='js/scroll.js') }}" type="text/javascript"></script>
+
 </body>
+
 
 </html>
