--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
       <div class="menu_right">
         <div class="logo_container">
           <img src="{{ url_for('static', filename='img/logo_header.png') }}" alt="logo" class="logo">
-          <p class="rno">real neighbourhood offer</p>
+          <p class="rno">real neighborhood offer</p>
         </div>
         <p class="southern_california_1">Southern California <b>#1</b> trusted homebuyer</p>
       </div>
@@ -277,8 +277,7 @@
             <p>Bankruptcy</p>
           </li>
           <li class="about_list_item">
-            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check"
-              class="about_check health_item">
+            <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
             <p>Health Issues</p>
           </li>
         </ul>
@@ -293,9 +292,9 @@
 
     <div class="about_left">
       <p class="about_us_heading">Explore</p>
-      <p class="about_us_subheading">Discover the Diverce</p>
+      <p class="about_us_subheading">Discover the Diverse</p>
       <p class="about_us_subheading">Locations Where We Have</p>
-      <p class="about_us_subheading">Bought Properties</p>
+      <p class="about_us_subheading">Purchased Properties</p>
       <p class="explore_description">
         We continuously purchase homes in 15 different states including Indiana, Texas, Florida, Maryland, Michigan,
         Utah,
@@ -337,7 +336,7 @@
         </ul>
 
         <ul class="about_list_block">
-          <p class="make_it_easy_list_heading">Real Neighbourhood Offer</p>
+          <p class="make_it_easy_list_heading">Real Neighborhood Offer</p>
           <li class="make_it_easy_item">
             <img src="{{ url_for('static', filename='img/v_check.png') }}" alt="v_check" class="v_check">
             <p>Selling the property independently</p>
@@ -383,7 +382,7 @@
     <div class="footer_left">
       <div class="logo_container">
         <img src="{{ url_for('static', filename='img/logo_header.png') }}" alt="logo" class="logo">
-        <p class="rno">real neighbourhood offer</p>
+        <p class="rno">real neighborhood offer</p>
       </div>
       <p class="footer_left_description">
         We are a real estate solutions and
