--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -176,7 +176,7 @@
         <ul class="about_list_block">
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
-            <p>Foreclosuree</p>
+            <p>Foreclosure</p>
           </li>
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
@@ -258,7 +258,7 @@
         <ul class="about_list_block">
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
-            <p>Foreclosuree</p>
+            <p>Foreclosure</p>
           </li>
           <li class="about_list_item">
             <img src="{{ url_for('static', filename='img/about_check.png') }}" alt="about_check" class="about_check">
