--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Real Neighborhood Offer</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='img/favicons/real_neighborhood_icon.png') }}">
 </head>
 
 <body>
