--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="sell real estate">
+  <meta name="keywords" content="sell home, buy house, real estate">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Real Neighborhood Offer</title>
